Hours common padding adjustment

--- a/src/components/HoursCommon.astro
+++ b/src/components/HoursCommon.astro
@@ -8,9 +8,9 @@ let {
 } = Astro.props;
 ---
 
-<div class="bg-background-900 p-6 sm:py-8 lg:py-12">
+<div class="bg-background-900 p-6">
   <div
-    class="mx-auto grid max-w-screen-2xl grid-cols-1 gap-2 rounded-lg bg-background-800 p-4 px-4 text-4xl leading-loose text-white shadow-xl sm:grid-cols-2 md:px-8"
+    class="mx-auto grid max-w-screen-2xl grid-cols-1 gap-2 p-4 text-4xl leading-loose text-white shadow-xl sm:grid-cols-2"
   >
     <div class="tall">
       <h1
