--- a/src/components/Specials.astro
+++ b/src/components/Specials.astro
@@ -6,11 +6,13 @@ import MenuCard from "./MenuCard.astro";
   class="bg-gradient-to-t from-accent-900 from-5% via-accent-800 to-accent-950 to-95% py-4"
 >
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
-    <h2
-      class="mb-4 text-center text-2xl font-bold text-white md:mb-8 lg:text-3xl xl:mb-12"
-    >
-      Specials
-    </h2>
+    <div class="mb-8 flex justify-start">
+      <h1
+        class="rounded-r-full bg-emerald-100/20 p-4 pr-6 text-xl text-white sm:text-3xl"
+      >
+        Specials
+      </h1>
+    </div>
     <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-6">
       <MenuCard
         url="images/kotsudonSando.png"
