--- a/src/components/Specials.astro
+++ b/src/components/Specials.astro
@@ -6,7 +6,7 @@ import MenuCard from "./MenuCard.astro";
   class="bg-gradient-to-t from-accent-900 from-5% via-accent-800 to-accent-950 to-95% py-4"
 >
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
-    <div class="mb-8 flex justify-start">
+    <div class="m-1 mt-4 flex justify-start">
       <h1
         class="rounded-r-full bg-emerald-100/20 p-4 pr-6 text-xl text-white sm:text-3xl"
       >
@@ -15,14 +15,14 @@ import MenuCard from "./MenuCard.astro";
     </div>
     <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-6">
       <MenuCard
-        url="images/kotsudonSando.png"
+        url="/images/kotsudonSando.png"
         spiceLevel="0"
         itemPrice="$10.99"
         itemNameEn="Kotsudon Sando"
         itemLikes="10"
       />
       <MenuCard
-        url="images/akaMisoSoup.png"
+        url="/images/akaMisoSoup.png"
         spiceLevel="0"
         itemPrice="$4.99"
         itemNameEn="Aka Miso Soup"
