--- a/src/components/Sizzle.astro
+++ b/src/components/Sizzle.astro
@@ -9,11 +9,11 @@ let {
 <div class="mx-auto max-w-screen-2xl bg-background-900 px-4 py-10 md:px-8">
   <div class="mx-4 grid gap-2 sm:grid-cols-1 md:grid-cols-2">
     <div
-      class="relative box-border flex h-96 items-end overflow-hidden rounded-lg bg-background-800 shadow-lg"
+      class="relative box-border flex h-full min-h-96 items-end overflow-hidden rounded-lg bg-background-800 shadow-lg"
       id="ytplayer"
     >
       <iframe
-        class="h-full w-full rounded-lg"
+        class="h-full w-full"
         id="ytplayer"
         loading="eager"
         allowfullscreen="no"
