--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -11,7 +11,6 @@ const {
 } = Astro.props;
 ---
 
-
 <div class="menuCard relative snap-start overflow-visible rounded-lg">
   <Image
     class="object-fit h-full w-full object-cover"
@@ -27,37 +26,6 @@ const {
     <div
       class="relative flex items-center justify-center pt-4 outline-4 outline-neutral-500"
     >
-      {
-        !(spiceLevel == 0) && (
-          <div id="fire" class="relative grid size-10 place-items-center">
-            <svg
-              class="z-0 h-full w-full"
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              aria-label="Fire icon with number 3"
-            >
-              <path
-                class="fill-red-600"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1
-              3.361-6.867 8.21 8.21 0 0 0 3 2.48Z"
-              />
-              <circle cx="14" cy="14" r="5.5" class="fill-red-900" />
-              <text
-                x="14"
-                y="15"
-                class="z-10 fill-white text-[0.65rem] font-bold"
-                text-anchor="middle"
-                dominant-baseline="middle"
-              >
-                {spiceLevel}
-              </text>
-            </svg>
-          </div>
-        )
-      }
     </div>
     <!-- Japanese Text with Manual Line Break -->
     <p class="upright jp m-2 max-h-48 max-w-36 text-gray-300 sm:text-xl">
@@ -97,6 +65,37 @@ const {
               </svg>
               <span>{itemLikes}</span>
             </span>
+          )
+        }
+        {
+          !(spiceLevel == 0) && (
+            <div id="fire" class="relative grid size-10 place-items-center">
+              <svg
+                class="z-0 size-8"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                aria-label="Fire icon with number 3"
+              >
+                <path
+                  class="fill-red-600"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15.362 5.214A8.252 8.252 0 0 1 12 21 8.25 8.25 0 0 1 6.038 7.047 8.287 8.287 0 0 0 9 9.601a8.983 8.983 0 0 1
+              3.361-6.867 8.21 8.21 0 0 0 3 2.48Z"
+                />
+                <circle cx="14" cy="14" r="5.5" class="fill-red-900" />
+                <text
+                  x="14"
+                  y="15"
+                  class="z-10 fill-white text-[0.65rem] font-bold"
+                  text-anchor="middle"
+                  dominant-baseline="middle"
+                >
+                  {spiceLevel}
+                </text>
+              </svg>
+            </div>
           )
         }
       </div>
