--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,89 +1,54 @@
 ---
-import type { CollectionEntry } from "astro:content";
 import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
-import FormattedDate from "../components/FormattedDate.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
-type Props = CollectionEntry<"blog">["data"];
-
-const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
+import Header from "../components/Header.astro";
+import Newletter from "../components/Newletter.astro";
+const { title, tags, mainimage } = Astro.props;
 ---
 
+<!doctype html>
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
-    <style>
-      main {
-        width: calc(100% - 2em);
-        max-width: 100%;
-        margin: 0;
-      }
-      .hero-image {
-        width: 100%;
-      }
-      .hero-image img {
-        display: block;
-        margin: 0 auto;
-        border-radius: 12px;
-        box-shadow: var(--box-shadow);
-      }
-      .prose {
-        width: 720px;
-        max-width: calc(100% - 2em);
-        margin: auto;
-        padding: 1em;
-        color: rgb(var(--gray-dark));
-      }
-      .title {
-        margin-bottom: 1em;
-        padding: 1em 0;
-        text-align: center;
-        line-height: 1;
-      }
-      .title h1 {
-        margin: 0 0 0.5em 0;
-      }
-      .date {
-        margin-bottom: 0.5em;
-        color: rgb(var(--gray));
-      }
-      .last-updated-on {
-        font-style: italic;
-      }
-    </style>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
-
   <body>
     <Header />
     <main>
-      <article>
-        <div class="hero-image">
+      <div
+        class="mx-auto h-64 max-w-5xl transition-all delay-75 duration-300 ease-in-out md:h-72 lg:h-96"
+      >
+        <img
+          src="https://imgix.cosmicjs.com/76185310-2eb4-11ed-9dcf-4f97d8f41281-simple-photo.jpg?w=1200&auto=format,compression"
+          alt="Featured Blog Post"
+          class="h-full w-full rounded-b-md object-cover object-center backdrop-blur-xl"
+          loading="eager"
+          decoding="async"
+        />
+      </div>
+      <div
+        class="relative z-10 -m-8 mx-auto max-w-xs rounded-md bg-stone-500 p-4 text-gray-300 transition-all delay-75 duration-300 ease-in-out sm:max-w-2xl"
+      >
+        <h1 class="font-sans text-2xl capitalize">{title}</h1>
+        <p>3m</p>
+        <ul class="mt-2 flex flex-wrap gap-1">
           {
-            heroImage && (
-              <img width={1020} height={510} src={heroImage} alt="" />
-            )
+            tags.nodes.map((name) => (
+              <li class="rounded-md bg-amber-600 px-2 text-base font-bold capitalize tracking-tight text-white shadow transition">
+                {name.name}
+              </li>
+            ))
           }
-        </div>
-        <div class="prose">
-          <div class="title">
-            <div class="date">
-              <FormattedDate date={pubDate} />
-              {
-                updatedDate && (
-                  <div class="last-updated-on">
-                    Last updated on <FormattedDate date={updatedDate} />
-                  </div>
-                )
-              }
-            </div>
-            <h1>{title}</h1>
-            <hr />
-          </div>
-          <slot />
-        </div>
-      </article>
+        </ul>
+      </div>
+      <section
+        class="prose prose-neutral mx-auto -mt-24 h-auto rounded bg-accent-800 p-6 pt-32 text-slate-100 transition-all delay-75 duration-300 ease-in-out dark:prose-invert prose-headings:capitalize md:max-w-3xl"
+      >
+        <slot />
+      </section>
     </main>
+    <Newletter />
     <Footer />
   </body>
 </html>
