--- a/src/components/Specials.astro
+++ b/src/components/Specials.astro
@@ -6,20 +6,21 @@ import MenuCard from "./MenuCard.astro";
   class="bg-gradient-to-t from-accent-900 from-5% via-accent-800 to-accent-950 to-95% py-4"
 >
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
-    <div class="m-1 mt-4 flex justify-start">
+    <div class="m-1 mt-4 flex">
       <h1
         class="rounded-r-full bg-emerald-100/20 p-4 pr-6 text-xl text-white sm:text-3xl"
       >
         Specials
       </h1>
     </div>
-    <div class="grid gap-4 sm:grid-cols-2 md:grid-cols-3 md:gap-6">
+    <div class="flex flex-wrap place-content-evenly gap-4 p-8 *:max-h-96 *:aspect-square">
       <MenuCard
         url="/images/kotsudonSando.png"
         spiceLevel="0"
         itemPrice="$10.99"
         itemNameEn="Kotsudon Sando"
         itemLikes="10"
+        place-content-center
       />
       <MenuCard
         url="/images/akaMisoSoup.png"
