--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -8,23 +8,32 @@ import Default from "../layouts/Default.astro";
   >
     <h1 class="text-primary-500">Join the Waitlist</h1>
     <!-- <p class="font-bold">Kindly review the following:</p> -->
-    <ul class="list-inside list-decimal">
-      <li class="">
-        <span class="text-red-400">Attention:</span>
+    <div class="*:tracking-loose list-none pl-4 *:my-3">
+      <li>
+        <span
+          class="inline-block min-w-24 rounded bg-red-700 p-1 py-1.5 text-right text-red-200"
+          >Attention:</span
+        >
         This is not for making reservations.
       </li>
-      <li class="">
-        <span class="font-semibold text-yellow-400">Note:</span>
-        The waitlist is activated only when our capacity is reached.
+      <li>
+        <span
+          class="inline-block min-w-24 rounded bg-yellow-700 p-1 py-1.5 text-right text-yellow-200"
+          >Note:</span
+        >
+        Please join only when we are full.
       </li>
-      <li class="">
-        <span class="font-semibold text-green-400">Procedure:</span>
+      <li>
+        <span
+          class="inline-block min-w-24 rounded bg-green-700 p-1 py-1.5 text-right text-green-200"
+          >Procedure:</span
+        >
         We'll notify you via text when your table is ready and wait for your complete
         party for 4 minutes. Please ensure all members of your party are present
         to be seated.
       </li>
-    </ul>
-    <div class="">
+    </div>
+    <div>
       <div class="text-right">
         <!-- Button Container -->
         <button
@@ -33,14 +42,14 @@ import Default from "../layouts/Default.astro";
           <a href="https://www.waitlist.me/w/12547731249">Join Here</a>
         </button>
       </div>
-      <p class="mt-4 text-right text-sm italic">
+      <p class="mt-4 pl-4 text-left text-sm italic">
         By clicking
         <span
-          class="inline-block rounded-full bg-accent-600 px-2 py-1 text-sm text-white outline-none ring-gray-300 focus-visible:ring active:bg-gray-700"
+          class="inline-block rounded-md bg-accent-600 px-2 py-1 text-sm text-white outline-none ring-gray-300 focus-visible:ring active:bg-gray-700"
         >
           Join Here
         </span>
-        , you agree to what is stated above.
+        <span class="block"> you agree to what is stated above. </span>
       </p>
     </div>
   </div>
