--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -40,7 +40,7 @@ const data = await wpquery({
 ---
 
 <Default>
-  <ol class="pl-auto mx-auto my-4 max-w-prose items-center space-y-2">
+  <ol class="pl-auto mx-auto my-4 max-w-screen-md items-center space-y-2">
     <BlogCard />
     <BlogCard />
   </ol>
