--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -1,5 +1,6 @@
 ---
 import Image from "astro/components/Image.astro";
+const BASE_URL = import.meta.env.BASE_URL;
 
 const {
   url = "/images/gochuSaladBowl.png",
@@ -14,7 +15,7 @@ const {
 <div class="menuCard relative snap-start rounded-md">
   <Image
     class="object-fit h-full w-full object-cover"
-    src={url}
+    src=`${BASE_URL}/${url}`
     alt={itemNameEn}
     height="720"
     width="1280"
