--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ let links = [
   class="overlay-accent relative flex items-center justify-between bg-jp-waves p-2"
 >
   <a
-    href="/"
+    href=`${BASE_URL}`
     id="navBrand"
     class="rounded-r-full bg-black/50 p-2 font-extrabold text-primary-300"
   >
