--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -1,4 +1,5 @@
 ---
+const BASE_URL = import.meta.env.BASE_URL;
 const {
   title = "Doing a lot with very little",
   imageUrl = "https://imgix.cosmicjs.com/76185310-2eb4-11ed-9dcf-4f97d8f41281-simple-photo.jpg?w=1200&auto=format,compression",
@@ -15,7 +16,7 @@ const {
 <li
   class="rounded-md bg-gray-700 shadow-md transition hover:shadow-xl [&_a]:first-of-type:flex-col [&_img]:first-of-type:h-96 [&_img]:first-of-type:rounded-b-none [&_img]:first-of-type:rounded-t-md"
 >
-  <a href={href} class="flex">
+  <a href=`${BASE_URL}/${href}` class="flex">
     <div class="">
       <img
         src={imageUrl}
