--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,7 +2,6 @@
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
 import { ViewTransitions } from "astro:transitions";
-
 import "../styles/global.css";
 
 interface Props {
@@ -11,6 +10,7 @@ interface Props {
   image?: string;
 }
 
+const BASE_URL = import.meta.env.BASE_URL;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
@@ -25,14 +25,14 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
 <!-- Font preloads -->
 <link
   rel="preload"
-  href="/fonts/atkinson-regular.woff"
+  href=`${BASE_URL}/fonts/atkinson-regular.woff`
   as="font"
   type="font/woff"
   crossorigin
 />
 <link
   rel="preload"
-  href="/fonts/atkinson-bold.woff"
+  href=`${BASE_URL}/fonts/atkinson-bold.woff`
   as="font"
   type="font/woff"
   crossorigin
