blogcard: migrated to using theme

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -14,9 +14,9 @@ const {
 ---
 
 <li
-  class="rounded-md bg-gray-700 shadow-md transition hover:shadow-xl [&_a]:first-of-type:flex-col [&_img]:first-of-type:h-96 [&_img]:first-of-type:rounded-b-none [&_img]:first-of-type:rounded-t-md"
+  class="rounded-md bg-background-800 shadow-md transition hover:shadow-xl [&_a]:first-of-type:flex-col [&_img]:first-of-type:h-96 [&_img]:first-of-type:rounded-b-none [&_img]:first-of-type:rounded-t-md"
 >
-  <a href=`${BASE_URL}/${href}` class="flex">
+  <a href=`${BASE_URL}${href}` class="flex">
     <div class="">
       <img
         src={imageUrl}
