--- a/src/pages/waitlist.astro
+++ b/src/pages/waitlist.astro
@@ -11,23 +11,23 @@ import Default from "../layouts/Default.astro";
     <div class="*:tracking-loose list-none pl-4 *:my-3">
       <li>
         <span
-          class="inline-block min-w-24 rounded bg-red-700 p-1 py-1.5 text-right text-red-200"
+          class="font-bold inline-block min-w-24 rounded-full bg-slate-800/50 px-2 text-right text-red-400"
           >Attention:</span
         >
         This is not for making reservations.
       </li>
       <li>
         <span
-          class="inline-block min-w-24 rounded bg-yellow-700 p-1 py-1.5 text-right text-yellow-200"
-          >Note:</span
-        >
+          class="font-bold inline-block min-w-24 rounded-full bg-slate-800/50 px-2 text-right text-yellow-400"
+          >Note:
+        </span>
         Please join only when we are full.
       </li>
       <li>
         <span
-          class="inline-block min-w-24 rounded bg-green-700 p-1 py-1.5 text-right text-green-200"
-          >Procedure:</span
-        >
+          class="font-bold inline-block min-w-24 rounded-full bg-slate-800/50 px-2 text-right text-green-400"
+          >Procedure:
+        </span>
         We'll notify you via text when your table is ready and wait for your complete
         party for 4 minutes. Please ensure all members of your party are present
         to be seated.
