--- a/src/components/forms/Hiring.astro
+++ b/src/components/forms/Hiring.astro
@@ -1,4 +1,4 @@
-<div class="bg-gray-900 py-6 sm:py-8 lg:py-12">
+<div class="bg-background-950 py-6 sm:py-8 lg:py-12">
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
     <!-- text - start -->
     <div class="mb-10 md:mb-16">
@@ -22,7 +22,7 @@
         >
         <input
           name="name"
-          class="w-full rounded border bg-gray-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
         />
       </div>
       <div>
@@ -34,7 +34,7 @@
         </label>
         <input
           name="phone"
-          class="w-full rounded border bg-gray-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
         />
       </div>
       <div>
@@ -45,7 +45,7 @@
         >
         <input
           name="email"
-          class="w-full rounded border bg-gray-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
         />
       </div>
       <div>
@@ -56,7 +56,7 @@
         </label>
         <textarea
           name="message"
-          class="h-64 w-full rounded border bg-gray-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="h-64 w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
           style="resize: none; overflow:auto;"></textarea>
       </div>
       <div>
@@ -68,7 +68,7 @@
         <input
           type="file"
           name="file-upload"
-          class="w-full transition duration-100 file:rounded file:border file:border-gray-800 file:bg-gray-700 file:px-3 file:py-2 file:text-sm file:text-gray-100 file:outline-none focus:file:ring-indigo-300"
+          class="w-full transition duration-100 file:rounded file:border file:border-gray-800 file:bg-background-700 file:px-3 file:py-2 file:text-sm file:text-gray-100 file:outline-none focus:file:ring-indigo-300"
         />
       </div>
       <div class="flex items-center justify-between">
