menu card roundness

--- a/src/components/MenuCard.astro
+++ b/src/components/MenuCard.astro
@@ -46,7 +46,7 @@ const {
       <div class="flex flex-row items-center">
         {
           !(itemLikes == 0) && (
-            <span class="mt-1 rounded-full pr-2 text-sm leading-snug text-yellow-300">
+            <span class="mt-1 rounded-md pr-2 text-sm leading-snug text-yellow-300">
               <svg
                 class="inline-block h-5 w-5"
                 xmlns="http://www.w3.org/2000/svg"
