--- a/src/components/Newletter.astro
+++ b/src/components/Newletter.astro
@@ -1,4 +1,4 @@
-<div class="bg-background-900 py-6 sm:py-8 lg:py-12">
+<div class="bg-transparent py-6 sm:py-8 lg:py-12">
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
     <div
       class="flex flex-col items-center rounded-lg bg-background-800 p-4 sm:p-8 lg:flex-row lg:justify-around"
@@ -17,12 +17,10 @@
         <form class="mb-3 flex w-full max-w-md gap-2">
           <input
             placeholder="Email"
-            class="bg-gray-white w-full flex-1 rounded border border-gray-300 px-3 py-2 text-gray-100 placeholder-gray-400
-              outline-none ring-indigo-300 transition duration-100 focus:ring"
+            class="bg-gray-white w-full flex-1 rounded border border-gray-300 px-3 py-2 text-gray-100 placeholder-gray-400 outline-none ring-indigo-300 transition duration-100 focus:ring"
           />
           <button
-            class="inline-block rounded bg-accent-500 px-8 py-2 text-center text-sm font-semibold text-white outline-none
-            ring-indigo-300 transition duration-100 hover:bg-accent-600 focus-visible:ring active:bg-indigo-700 md:text-base"
+            class="inline-block rounded bg-accent-500 px-8 py-2 text-center text-sm font-semibold text-white outline-none ring-indigo-300 transition duration-100 hover:bg-accent-600 focus-visible:ring active:bg-indigo-700 md:text-base"
           >
             Send
           </button>
