--- a/src/components/forms/Contact.astro
+++ b/src/components/forms/Contact.astro
@@ -1,4 +1,4 @@
-<div class="bg-accent-900 py-6 sm:py-8 lg:py-12">
+<div class="bg-background-950 py-6 sm:py-8 lg:py-12">
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8">
     <!-- text - start -->
     <div class="mb-10 md:mb-16">
@@ -22,7 +22,7 @@
         >
         <input
           name="name"
-          class="w-full rounded border bg-accent-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
         />
       </div>
       <div>
@@ -33,7 +33,7 @@
         >
         <input
           name="phone"
-          class="w-full rounded border bg-accent-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
         />
       </div>
       <div>
@@ -44,7 +44,7 @@
         >
         <input
           name="email"
-          class="w-full rounded border bg-accent-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
         />
       </div>
       <div>
@@ -55,12 +55,12 @@
         >
         <textarea
           name="message"
-          class="h-64 w-full rounded border bg-accent-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
+          class="h-64 w-full rounded border bg-background-50 px-3 py-2 text-gray-800 outline-none ring-indigo-300 transition duration-100 focus:ring"
           style="resize: none; overflow: auto;"></textarea>
       </div>
       <div class="flex items-center justify-between">
         <button
-          class="inline-block rounded-lg bg-accent-500 px-8 py-3 text-center text-sm font-semibold text-white outline-none ring-indigo-300 transition duration-100 hover:bg-indigo-600 focus-visible:ring active:bg-indigo-700 md:text-base"
+          class="inline-block rounded-lg bg-background-500 px-8 py-3 text-center text-sm font-semibold text-white outline-none ring-indigo-300 transition duration-100 hover:bg-indigo-600 focus-visible:ring active:bg-indigo-700 md:text-base"
         >
           Send
         </button>
